add dependency packages

--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "16.5.0",
-    "react-native": "0.57.2"
+    "react-native": "0.57.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.0",
-    "react-test-renderer": "16.5.0"
+    "react-test-renderer": "16.5.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-plugin-react": "^7.11.1"
   },
   "jest": {
     "preset": "react-native"
